--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard_prototype.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard_prototype.html
@@ -131,7 +131,85 @@
 
       <div id="report_content_seperate_div" class="seperate_div_class" style="margin-top:110px"></div>
 
-
+      <div class="row" style="display:none">
+        <div class="col-md-3">
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-6">
+              <img id="b0" src="assets/self-owned/img/b0.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+            <div class="col-md-6">
+              <img id="b1" src="assets/self-owned/img/b1.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-6">
+              <img id="b2" src="assets/self-owned/img/b2.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+            <div class="col-md-6">
+              <img id="b3" src="assets/self-owned/img/b3.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-6">
+              <img id="b4" src="assets/self-owned/img/b4.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+            <div class="col-md-6">
+              <img id="b5" src="assets/self-owned/img/b5.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b6" src="assets/self-owned/img/b6.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b7" src="assets/self-owned/img/b7.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b8" src="assets/self-owned/img/b8.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b9" src="assets/self-owned/img/b9.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b10" src="assets/self-owned/img/b10.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b11" src="assets/self-owned/img/b11.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b12" src="assets/self-owned/img/b12.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b13" src="assets/self-owned/img/b13.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+          <div class="row" style="margin-bottom:18px">
+            <div class="col-md-12">
+              <img id="b14" src="assets/self-owned/img/b14.png" alt="..." class="img-rounded" style="width:100%;">
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row" style="display:none">
         <div class="col-md-6">
           <img id="d0" src="assets/self-owned/img/d0.png" alt="..." class="img-rounded" style="width:100%;">
