动态图取消datazoom

--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
@@ -23,6 +23,7 @@
             .grid-stack-item-content {
                 background: white;
                 color: #2c3e50;
+                overflow: hidden !important;
             }
 
             header a,
@@ -148,7 +149,7 @@
                 <!-- Matrix Dashboard Grid Template Begin -->
                 <div style="display:none">
                     <div class="grid-stack-item-content" id='draggableTemplate' style="top: 0px;left: 0px;right: 0px;bottom: 0px;">
-                        <div class="card card-mini" style="box-shadow: none;height:100%;overflow-y: hidden">
+                        <div class="card card-mini" style="box-shadow: none;height:100%;overflow: hidden">
                             <div class="card-header grid-stack-item-header" style="padding: 8px 0px 0px 16px;display: none">
                                 <div class="card-title">
                                     <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
